[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-web-actors = "4.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trackshift = { path = "../brain" }
anyhow = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
