[package]
name = "quic_fec"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
quinn-proto = "0.11"
rustls = "0.23"
rustls-pki-types = "1.0"
rustls-pemfile = "2.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
parking_lot = "0.12"
common = { path = "../common" }
reed-solomon-erasure = "6.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lz4_flex = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }

[[example]]
name = "telemetry_integration"
path = "examples/telemetry_integration.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dev-dependencies]

